# phoenix-platform

./: README.md  pyproject.toml
src/phoenix/: __init__.py
src/phoenix/core/: __init__.py
src/phoenix/core/contracts/: __init__.py  error.py  exceptions.py  outcome.py  result.py
tests/core/: test_error.py
tests/core/contracts/: test_result.py
